fixed design bug with overflow scroll in menu list

--- a/src/features/menus/MenuList/MenuList.module.css
+++ b/src/features/menus/MenuList/MenuList.module.css
@@ -4,9 +4,11 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  overflow: scroll;
 }
 
 .menuList li {
+  min-height: 4rem;
   max-width: 40rem;
   width: 70%;
   height: 3.2rem;
